--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "express-handlebars": "^3.1.0",
+    "nodemon": "^2.0.2",
+    "sequelize": "^5.21.5"
   }
 }
